--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -2,7 +2,8 @@ name: Update README
 
 on:
   schedule:
-    - cron: '0 0 * * *' # Runs at 00:00 UTC every day
+    # Runs at 00:00 UTC every day
+    - cron: '0 0 * * *' 
   workflow_dispatch: # Allows manual triggering
 
 jobs:
@@ -15,28 +16,37 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      # --- Use pnpm setup for a clean workflow ---
+      - name: Setup Node.js and pnpm
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-
+          cache: 'pnpm' # Cache should match the package manager used (pnpm)
+      
       - name: Install pnpm
-        uses: npm/action-setup@v3
-        with:
-          version: 9
+        run: npm install -g pnpm # Ensure pnpm is globally available if setup-node doesn't provide it
 
       - name: Install dependencies
-        run: npm ci
+        # Use pnpm install instead of npm ci if pnpm is the chosen manager
+        run: pnpm install --frozen-lockfile 
+        # Note: --frozen-lockfile is the pnpm equivalent of npm ci
 
       - name: Generate README
-        run: npm readme
+        run: pnpm readme # Use pnpm run for consistency
         env:
-          DATABASE_URL: dev.db # Ensure script knows where to look
+          # Only define the DATABASE_URL needed for this specific script
+          DATABASE_URL: dev.db 
 
       - name: Commit and Push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add README.md
-          git diff --quiet && git diff --staged --quiet || (git commit -m "docs: update reading list [skip ci]" && git push)
+          
+          # Check if README.md was actually modified
+          if git diff --exit-code README.md > /dev/null; then
+            echo "No changes found in README.md. Skipping commit."
+          else
+            git add README.md
+            git commit -m "docs: update reading list [skip ci]"
+            git push
+          fi
